--- a/package.json
+++ b/package.json
@@ -1,18 +1,19 @@
 {
   "private": true,
+  "name": "pitchcraft", 
   "version": "0.0.0",
   "type": "module",
+  "homepage": "https://mohammadbilal57.github.io/pitchcraft/", 
   "scripts": {
-  "dev": "vite",
-  "build": "vite build",
-  "preview": "vite preview",
-  "predeploy": "npm run build",
-  "deploy": "gh-pages -d dist"
-},
+    "dev": "vite",
+    "build": "vite build",
+    "preview": "vite preview",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist"
+  },
   "dependencies": {
     "@google/generative-ai": "^0.24.1",
     "firebase": "^12.4.0",
-    "gh-pages": "^6.3.0",
     "lucide-react": "^0.546.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
@@ -28,6 +29,7 @@
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.22",
     "globals": "^16.4.0",
-    "vite": "^7.1.7"
+    "vite": "^7.1.7",
+    "gh-pages": "^6.3.0"
   }
 }
